# webrtc-framecapture-server

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.janus  README.md  TROUBLESHOOTING.md  demo.html  docker-compose.hostnet.yml  docker-compose.yml  manage.sh
config/: rtp.sdp
janus/: janus.jcfg  janus.plugin.videoroom.jcfg
src/: main.cpp
src/app/: App.cpp  App.h
src/ingest/: RtpReceiver.cpp  RtpReceiver.h
src/media/: FrameWriter.cpp  FrameWriter.h  MatUtils.cpp  MatUtils.h
src/signaling/: HttpSignalingServer.cpp  HttpSignalingServer.h
src/util/: Args.cpp  Args.h  Log.cpp  Log.h
src/webrtc/: Observers.cpp  Observers.h  Peer.cpp  Peer.h  SdpUtils.cpp  SdpUtils.h  VideoFrameSink.cpp  VideoFrameSink.h  WebrtcFactory.cpp  WebrtcFactory.h
tests/: test_framewriter.cpp  test_matutils.cpp
